[gd_scene load_steps=5 format=3 uid="uid://bpn5opc6pj2l4"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_k33y6"]
[ext_resource type="Texture2D" uid="uid://bqlhw34lg8rp4" path="res://sprites/Character4_face4.png" id="2_f4ti8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5an8v"]
size = Vector2(48, 59)

[sub_resource type="CircleShape2D" id="CircleShape2D_1lsv5"]
radius = 1986.05

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 15
collision_mask = 15
script = ExtResource("1_k33y6")
attack_damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 10)
shape = SubResource("RectangleShape2D_5an8v")

[node name="Small-8-direction-charactersByAxulArt" type="Sprite2D" parent="."]
position = Vector2(10, 9)
scale = Vector2(0.247493, 0.209766)
texture = ExtResource("2_f4ti8")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1lsv5")

[node name="AttackTimer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
